fix align issue for case-upload

--- a/assets/css/case-upload.css
+++ b/assets/css/case-upload.css
@@ -67,79 +67,79 @@
 .form-submit-case .submit-btn:after {
   clear: both;
 }
-.close[data-dismiss="alert"] {
+#submitCase .close[data-dismiss="alert"] {
 	display:none;
 }
-.alert {
+#submitCase .alert {
   padding: 15px;
   margin-bottom: 20px;
   border: 1px solid transparent;
   border-radius: 4px;
 }
-.alert h4 {
+#submitCase .alert h4 {
   margin-top: 0;
   color: inherit;
 }
-.alert .alert-link {
+#submitCase .alert .alert-link {
   font-weight: bold;
 }
-.alert > p,
-.alert > ul {
+#submitCase .alert > p,
+#submitCase .alert > ul {
   margin-bottom: 0;
 }
-.alert > p + p {
+#submitCase .alert > p + p {
   margin-top: 5px;
 }
-.alert-dismissable {
+#submitCase .alert-dismissable {
   padding-right: 35px;
 }
-.alert-dismissable .close {
+#submitCase .alert-dismissable .close {
   position: relative;
   top: -2px;
   right: -21px;
   color: inherit;
 }
-.alert-success {
+#submitCase .alert-success {
   background-color: #dff0d8;
   border-color: #d6e9c6;
   color: #3c763d;
 }
-.alert-success hr {
+#submitCase .alert-success hr {
   border-top-color: #c9e2b3;
 }
-.alert-success .alert-link {
+#submitCase .alert-success .alert-link {
   color: #2b542c;
 }
-.alert-info {
+#submitCase .alert-info {
   background-color: #d9edf7;
   border-color: #bce8f1;
   color: #31708f;
 }
-.alert-info hr {
+#submitCase .alert-info hr {
   border-top-color: #a6e1ec;
 }
-.alert-info .alert-link {
+#submitCase .alert-info .alert-link {
   color: #245269;
 }
-.alert-warning {
+#submitCase .alert-warning {
   background-color: #fcf8e3;
   border-color: #faebcc;
   color: #8a6d3b;
 }
-.alert-warning hr {
+#submitCase .alert-warning hr {
   border-top-color: #f7e1b5;
 }
-.alert-warning .alert-link {
+#submitCase .alert-warning .alert-link {
   color: #66512c;
 }
-.alert-danger {
+#submitCase .alert-danger {
   background-color: #f2dede;
   border-color: #ebccd1;
   color: #a94442;
 }
-.alert-danger hr {
+#submitCase .alert-danger hr {
   border-top-color: #e4b9c0;
 }
-.alert-danger .alert-link {
+#submitCase .alert-danger .alert-link {
   color: #843534;
 }
